# so-24A

./: .gitignore  README.md
Planificacion/LaTeX/: main.tex
Plantilla/: main.tex
Practica-1/LaTeX/: main.tex
Practica-2/LaTeX/: main.tex
Practica-3/: LinkedList.h  ListNode.h  main.cpp  proceso
Practica-3/E1/: CMakeLists.txt  LinkedList.cpp  ListNode.cpp  ejemplo  ejemplo.cpp  main.cpp  proceso.c
Practica-3/E2/: main  main.cpp
Practica-3/E3/: CMakeLists.txt  Makefile  mensaje  mensaje.c  salida_alt.c  salida_alt.h
Practica-3/LaTeX/: main.lol  main.tex
Practica-4/: e1  e2
Practica-4/Actividades/: consumer  e1.c  e2  e2.c  producer
Practica-4/Cuestionario/: cuestionario  cuestionario.c
Practica-4/Ejercicios/: consumer.c  e1  e1.c  e2  e2.c  e3.c  e4.c  producer.c
Practica-4/LaTeX/: main.tex
Procesos/LaTeX/: logo_salle.htm  main.tex
primera-evidencia/: test.tex
sincronizacion/berkeley/: Cargo.toml
sincronizacion/berkeley/src/: master.rs  slave.rs
sincronizacion/cristian/: Cargo.toml
sincronizacion/cristian/src/: client.rs  main.rs
