[package]
name = "berkeley_algorithm"
version = "0.1.0"
edition = "2021"

# Define where the main (master) binary is located
[[bin]]
name = "master"
path = "src/master.rs"

# Define where the slave binary is located
[[bin]]
name = "slave"
path = "src/slave.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
